[package]
name = "clinews"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colour = "0.6.0"
dotenv = "0.15.0"
envy = "0.4.2"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.71"
ureq = "2.3.1"
